--- a/capacity_app/templates/capacity_app/financial_approval.html
+++ b/capacity_app/templates/capacity_app/financial_approval.html
@@ -50,7 +50,7 @@ td {
 
     <ul class="sidebar-nav" id="sidebar-nav">
         <li class="nav-item">
-            <a class="nav-link collapsed" href="{% url 'financial_approval' %}">
+            <a class="nav-link" href="{% url 'financial_approval' %}">
                 <i class="bi bi-grid"></i>
                 <span>Approval Request</span>
             </a>
@@ -58,7 +58,7 @@ td {
 
         <li class="nav-item">
             <a class="nav-link collapsed" href="{% url 'financial_completed_request' %}">
-                <i class="bi bi-grid"></i>
+                <i class="bi bi-journal-text"></i>
                 <span>Completed Request</span>
             </a>
         </li><!-- End Dashboard Nav -->
