--- a/capacity_app/templates/capacity_app/procurement_approval.html
+++ b/capacity_app/templates/capacity_app/procurement_approval.html
@@ -47,7 +47,7 @@ td {
 
     <ul class="sidebar-nav" id="sidebar-nav">
         <li class="nav-item">
-            <a class="nav-link collapsed" href="{% url 'procurement_approval' %}">
+            <a class="nav-link" href="{% url 'procurement_approval' %}">
                 <i class="bi bi-grid"></i>
                 <span>Approval Request</span>
             </a>
@@ -55,7 +55,7 @@ td {
 
         <li class="nav-item">
             <a class="nav-link collapsed" href="{% url 'procurement_completed_request' %}">
-                <i class="bi bi-grid"></i>
+                <i class="bi bi-journal-text"></i>
                 <span>Completed Request</span>
             </a>
         </li><!-- End Dashboard Nav -->
