--- a/capacity_app/templates/capacity_app/procurement_completed_request.html
+++ b/capacity_app/templates/capacity_app/procurement_completed_request.html
@@ -54,8 +54,8 @@ td {
         </li><!-- End Dashboard Nav -->
 
         <li class="nav-item">
-            <a class="nav-link collapsed" href="{% url 'procurement_completed_request' %}">
-                <i class="bi bi-grid"></i>
+            <a class="nav-link" href="{% url 'procurement_completed_request' %}">
+                <i class="bi bi-journal-text"></i>
                 <span>Completed Request</span>
             </a>
         </li><!-- End Dashboard Nav -->
