--- a/capacity_app/templates/capacity_app/dashboard.html
+++ b/capacity_app/templates/capacity_app/dashboard.html
@@ -38,10 +38,11 @@
             </ul>
         </li><!-- End Components Nav -->
 
-        <li class="nav-heading">Capacity - Alpha4</li>
-
+        {% if query_data == "admin" or query_data %}
+        <li class="nav-heading">Capacity - Alpha4 {{query_data | length}}</li>
         <li class="nav-item">
             <a class="nav-link collapsed" data-bs-target="#components-nav" data-bs-toggle="collapse" href="#">
+
                 <i class="bi bi-menu-button-wide"></i>
                 <span>Request - Alpha4</span>
                 <i class="bi bi-chevron-down ms-auto"></i>
@@ -68,6 +69,7 @@
         </li><!-- End Components Nav -->
 
     </ul>
+     {% endif %}
 
 </aside><!-- End Sidebar-->
 
