--- a/capacity_app/templates/capacity_app/finance_completed.html
+++ b/capacity_app/templates/capacity_app/finance_completed.html
@@ -108,7 +108,7 @@ td {
                                     <th nowrap class="gravit" data-field="gravit" data-sortable="true" > Gravit (TB)</th>
                                     <th nowrap class="updated_at" data-field="updated_at" data-sortable="true" >Updated Date</th>
                                     <th nowrap class="remarks" data-field="remarks" data-sortable="true" >Remarks</th>
-                                    <th nowrap class="milestone_name" data-field="milestone_name" data-sortable="true">{{i.milestone_name}}</th>
+                                    <!--<th nowrap class="milestone_name" data-field="milestone_name" data-sortable="true">{{i.milestone_name}}</th>-->
                                     <th nowrap class="action" data-sortable="true" data-formatter="priceFormatter">Status</th>
                                 </tr>
                                 </thead>
@@ -128,7 +128,7 @@ td {
                                     <td nowrap class="gravit">{{i.gravit}}</td>
                                     <td nowrap class="updated_at">{{i.created_at|date:'Y-m-d H:i:s'}}</td>
                                     <td nowrap class="remarks">{{i.remarks}}</td>
-                                    <td nowrap class="milestone_name">{{i.date}}</td>
+                                    <!--<td nowrap class="milestone_name">{{i.date}}</td>-->
                                     <td nowrap class="action">Completed</td>
                                     {% endfor %}
                                 </tr>
