--- a/capacity_app/templates/capacity_app/dashboard.html
+++ b/capacity_app/templates/capacity_app/dashboard.html
@@ -39,7 +39,7 @@
         </li><!-- End Components Nav -->
 
         {% if query_data == "admin" or query_data %}
-        <li class="nav-heading">Capacity - Alpha4 {{query_data | length}}</li>
+        <li class="nav-heading">Capacity - Alpha4</li>
         <li class="nav-item">
             <a class="nav-link collapsed" data-bs-target="#components-nav" data-bs-toggle="collapse" href="#">
 
