--- a/capacity_app/templates/capacity_app/create_request.html
+++ b/capacity_app/templates/capacity_app/create_request.html
@@ -177,15 +177,14 @@ input[type="text"] {
                                 <input type="number" class="form-control" id="gravit" name="gravit" min="0" max="500" value="0" required>
                             </div>
 
-                            <!--<div class="mb-3 col-md-6">
-                                <label for="move_group_name" class="form-label">Move Group Name <sup><strong>*</strong></sup></label>
+                            <div class="mb-3 col-md-6">
+                                <label for="move_group_name" class="form-label">Milestone <sup><strong>*</strong></sup></label>
                                 <select id="move_group_name" class="form-select" name="move_group_name" required>
-                                    <option value="" selected="selected" disabled="disabled">Move Group Name</option>
-                                    <option value="MoveGroup 1">MoveGroup 1</option>
-                                    <option value="MoveGroup 2">MoveGroup 2</option>
-                                    <option value="MoveGroup 3">MoveGroup 3</option>
+                                    <option value="" selected="selected" disabled="disabled">Milestone</option>
+                                    <option value="P1">P1</option>
+                                    <option value="P2">P2</option>
                                 </select>
-                            </div>-->
+                            </div>
                             <div class="mb-3 col-md-6">
                                 <label for="remarks" class="form-label">Remarks <sup><strong>*</strong></sup></label>
                                 <textarea id="remarks" maxlength="256" rows="4" cols="50" class="form-control" name="remarks" required></textarea>
