--- a/capacity_app/templates/capacity_app/view_request.html
+++ b/capacity_app/templates/capacity_app/view_request.html
@@ -153,7 +153,7 @@ td {
                                 <th nowrap class="arbor" data-field="arbor" data-sortable="true" >Arbor (TB)</th>
                                 <th nowrap class="gravit" data-field="gravit" data-sortable="true" > Gravit (TB)</th>
                                 <th nowrap class="updated_at" data-field="updated_at" data-sortable="true" >Updated Date</th>
-                                <!--<th nowrap class="move_group_name" data-field="move_group_name" data-sortable="true" >Move Group Name</th>-->
+                                <th nowrap class="move_group_name" data-field="move_group_name" data-sortable="true" >Milestone</th>
                                 <th nowrap class="remarks" data-field="remarks" data-sortable="true" >Remarks</th>
                                 <th nowrap class="status" data-field="status" data-sortable="true" data-formatter="priceFormatter" >Status</th>
                                 <!--<th nowrap class="action" data-sortable="true">Actions</th>-->
@@ -174,7 +174,7 @@ td {
                                 <td nowrap class="arbor">{{i.arbor|floatformat}}</td>
                                 <td nowrap class="gravit">{{i.gravit|floatformat}}</td>
                                 <td nowrap class="updated_at">{{i.updated_time|date:'Y-m-d H:i:s'}}</td>
-                                <!--<td nowrap class="move_group_name">{{i.move_group_name}}</td>-->
+                                <td nowrap class="move_group_name">{{i.move_group_name}}</td>
                                 <td nowrap class="remarks">{{i.remarks}}</td>
                                 <td nowrap class="status">{{i.tkt_status}}</td>
                                 <!--<td>
