--- a/capacity_app/templates/capacity_app/admin_completed_request.html
+++ b/capacity_app/templates/capacity_app/admin_completed_request.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 {% extends "capacity_app/base.html" %}
 {% load static %}
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
+
     {% block content %}
-    <title>View Request</title>
+    <title>Completed Request</title>
+
     <link href="{% static 'capacity_app/table_extensions/fontawesome-free-5.15.1/css/all.css' %}" rel="stylesheet">
     <link href="{% static 'capacity_app/table_extensions/fontawesome-free-5.15.1/css/all.min.css' %}" rel="stylesheet">
     <!-- Custom styles for this template-->
@@ -24,48 +26,15 @@
 td {
     white-space: nowrap;
 }
-.btn-info {
-    color: #fff;
-    background-color: #17a2b8;
-    border-color: #17a2b8;
-}
-.btn-info:hover, .btn-info:focus, .btn-info:active, .btn-info.active, .open>.dropdown-toggle.btn-info {
-    color: #fff;
-    background-color: #17a2b8;
-    border-color: #17a2b8;
-}
-.action {
-    text-align: center;
-}
+
 </style>
 <body>
 <!-- ======= Sidebar ======= -->
 <aside id="sidebar" class="sidebar">
 
     <ul class="sidebar-nav" id="sidebar-nav">
-        <li class="nav-item">
-            <a class="nav-link collapsed" href="{% url 'dashboard' %}">
-                <i class="bi bi-grid"></i>
-                <span>Dashboard</span>
-            </a>
-        </li><!-- End Dashboard Nav -->
 
-        <li class="nav-item">
-            <a class="nav-link collapsed" data-bs-target="#components-nav1" data-bs-toggle="collapse" href="#">
-                <i class="bi bi-journal-text"></i>
-                <span>Project Planner</span>
-                <i class="bi bi-chevron-down ms-auto"></i>
-            </a>
-            <ul id="components-nav1" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-                <li>
-                    <a href="{% url 'project_view_request' %}">
-                        <i class="bi bi-circle"></i><span>View Project Plan</span>
-                    </a>
-                </li>
-            </ul>
-        </li><!-- End Components Nav -->
-
-        <li class="nav-heading">Capacity - Alpha4</li>
+        <li class="nav-heading">Capacity - Alpha4 Admin</li>
 
         <li class="nav-item">
             <a class="nav-link" data-bs-target="#components-nav" data-bs-toggle="collapse" href="#">
@@ -74,20 +43,13 @@ td {
                 <i class="bi bi-chevron-down ms-auto"></i>
             </a>
             <ul id="components-nav" class="nav-content collapse show" data-bs-parent="#sidebar-nav">
-                {% if user_group != "admin" %}
                 <li>
-                    <a href="{% url 'create_request' %}">
-                        <i class="bi bi-circle"></i><span>Create Request</span>
-                    </a>
-                </li>
-                {% endif %}
-                <li>
-                    <a href="{% url 'view_request' %}"  class="active">
+                    <a href="{% url 'view_request' %}">
                         <i class="bi bi-circle"></i><span>View Request</span>
                     </a>
                 </li>
                 <li>
-                    <a href="{% url 'completed_ticket_data' %}">
+                    <a href="{% url 'completed_ticket_data' %}"  class="active">
                         <i class="bi bi-circle"></i><span>Completed Request</span>
                     </a>
                 </li>
@@ -100,12 +62,12 @@ td {
 
 <main id="main" class="main">
 <div class="pagetitle">
-    <h1>View Request</h1>
+    <h1>Completed Request</h1>
     <nav>
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="index.html">Home</a></li>
             <li class="breadcrumb-item">Request</li>
-            <li class="breadcrumb-item">View Request</li>
+            <li class="breadcrumb-item">Completed Request - Admin</li>
         </ol>
     </nav>
 </div><!-- End Page Title -->
@@ -115,8 +77,8 @@ td {
         <div class="col-lg-12">
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title">View Request - Alpha4</h5>
-                    <font size="2" face = "futura,helvetica">
+                    <h5 class="card-title">Completed Request - Alpha4</h5>
+                    <font size="2" face="futura,helvetica">
                         <table class="table table-bordered table-striped" id="example"
                                data-toggle="table"
                                data-pagination="true"
@@ -152,10 +114,10 @@ td {
                                 <th nowrap class="stable2" data-field="stable2" data-sortable="true" >Stable2 (TB)</th>
                                 <th nowrap class="arbor" data-field="arbor" data-sortable="true" >Arbor (TB)</th>
                                 <th nowrap class="gravit" data-field="gravit" data-sortable="true" > Gravit (TB)</th>
-                                <th nowrap class="updated_at" data-field="updated_at" data-sortable="true" >Updated Date</th>
-                                <th nowrap class="move_group_name" data-field="move_group_name" data-sortable="true" >Milestone</th>
+                                <th nowrap class="updated_at" data-field="updated_at" data-sortable="true" >Completed Date</th>
+                                <th nowrap class="move_group_name" data-field="move_group_name" data-sortable="true" >Move Group Name</th>
                                 <th nowrap class="remarks" data-field="remarks" data-sortable="true" >Remarks</th>
-                                <th nowrap class="status" data-field="status" data-sortable="true" data-formatter="priceFormatter" >Status</th>
+                                <th nowrap class="status" data-field="status" data-sortable="true" data-formatter="priceFormatter"  >Status</th>
                             </tr>
                             </thead>
                             <tbody>
@@ -218,11 +180,10 @@ td {
 <script>
     $('#example').bootstrapTable({
     exportOptions: {
-        fileName: 'View Request'
+        fileName: 'Completed Request'
     }
 });
 </script>
-
 
 
 {% endblock content %}
