--- a/capacity_app/templates/capacity_app/admin_view_request.html
+++ b/capacity_app/templates/capacity_app/admin_view_request.html
@@ -43,29 +43,8 @@ td {
 <aside id="sidebar" class="sidebar">
 
     <ul class="sidebar-nav" id="sidebar-nav">
-        <li class="nav-item">
-            <a class="nav-link collapsed" href="{% url 'dashboard' %}">
-                <i class="bi bi-grid"></i>
-                <span>Dashboard</span>
-            </a>
-        </li><!-- End Dashboard Nav -->
 
-        <li class="nav-item">
-            <a class="nav-link collapsed" data-bs-target="#components-nav1" data-bs-toggle="collapse" href="#">
-                <i class="bi bi-journal-text"></i>
-                <span>Project Planner</span>
-                <i class="bi bi-chevron-down ms-auto"></i>
-            </a>
-            <ul id="components-nav1" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-                <li>
-                    <a href="{% url 'project_view_request' %}">
-                        <i class="bi bi-circle"></i><span>View Project Plan</span>
-                    </a>
-                </li>
-            </ul>
-        </li><!-- End Components Nav -->
-
-        <li class="nav-heading">Capacity - Alpha4</li>
+        <li class="nav-heading">Capacity - Alpha4 Admin</li>
 
         <li class="nav-item">
             <a class="nav-link" data-bs-target="#components-nav" data-bs-toggle="collapse" href="#">
@@ -74,13 +53,6 @@ td {
                 <i class="bi bi-chevron-down ms-auto"></i>
             </a>
             <ul id="components-nav" class="nav-content collapse show" data-bs-parent="#sidebar-nav">
-                {% if user_group != "admin" %}
-                <li>
-                    <a href="{% url 'create_request' %}">
-                        <i class="bi bi-circle"></i><span>Create Request</span>
-                    </a>
-                </li>
-                {% endif %}
                 <li>
                     <a href="{% url 'view_request' %}"  class="active">
                         <i class="bi bi-circle"></i><span>View Request</span>
@@ -105,7 +77,7 @@ td {
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="index.html">Home</a></li>
             <li class="breadcrumb-item">Request</li>
-            <li class="breadcrumb-item">View Request</li>
+            <li class="breadcrumb-item">View Request - Admin</li>
         </ol>
     </nav>
 </div><!-- End Page Title -->
@@ -156,6 +128,7 @@ td {
                                 <th nowrap class="move_group_name" data-field="move_group_name" data-sortable="true" >Milestone</th>
                                 <th nowrap class="remarks" data-field="remarks" data-sortable="true" >Remarks</th>
                                 <th nowrap class="status" data-field="status" data-sortable="true" data-formatter="priceFormatter" >Status</th>
+                                <th nowrap class="action" data-sortable="true">Actions</th>
                             </tr>
                             </thead>
                             <tbody>
@@ -176,6 +149,10 @@ td {
                                 <td nowrap class="move_group_name">{{i.move_group_name}}</td>
                                 <td nowrap class="remarks">{{i.remarks}}</td>
                                 <td nowrap class="status">{{i.tkt_status}}</td>
+                                <td>
+                                    <button type="button" class="btn btn-danger btn-sm" title="Reject Request"><a style="text-decoration:none;color:#fff;" href="{% url 'update_request' pk=i.request_id %}"><i class="fas fa-times-circle"></i></a></button>
+                                    <button type="button" class="btn btn-success btn-sm" title="Complete Request"><a style="text-decoration:none;color:#fff;" href="{% url 'completed_request' pk=i.request_id %}"><i class="fas fa-tasks"></i></a></button>
+                                </td>
                                 {% endfor %}
                             </tr>
                             </tbody>
@@ -222,11 +199,7 @@ td {
     }
 });
 </script>
-
-
-
 {% endblock content %}
-
 </body>
 </head>
 </html>
