--- a/capacity_app/templates/capacity_app/completed_request.html
+++ b/capacity_app/templates/capacity_app/completed_request.html
@@ -157,7 +157,7 @@ td {
                             <tbody>
                             {% for i in data %}
                             <tr>
-                                <td nowrap class="request_id"><a href={% url 'history_request' id=i.request_id %} style="text-decoration:underline;">{{i.request_id}}</a></td>
+                                <td nowrap class="request_id">{{i.request_id}}</td>
                                 <td nowrap class="dc">{{i.data_center}}</td>
                                 <td nowrap class="project_name">{{i.project_name}}</td>
                                 <td nowrap class="user_id">{{i.user_id}}</td>
