--- a/capacity_app/templates/capacity_app/project_view_request.html
+++ b/capacity_app/templates/capacity_app/project_view_request.html
@@ -141,11 +141,11 @@ input[type="text"] {
                         <i class="bi bi-circle"></i><span>View Request</span>
                     </a>
                 </li>
-                <!--<li>
+                <li>
                     <a href="{% url 'completed_ticket_data' %}">
                         <i class="bi bi-circle"></i><span>Completed Request</span>
                     </a>
-                </li>-->
+                </li>
             </ul>
         </li><!-- End Components Nav -->
         {% endif %}
@@ -278,7 +278,7 @@ input[type="text"] {
                                 </div>
                             </div>
                             <br>
-                            <!--<label class="form-label">Milestone</label>
+                            <label class="form-label">Milestone</label>
                             <div class="row">
                                 <div class="mb-3 col-md-6">
                                     <p class="form-control" readonly>{{data.0.milestone_name}}</p>
@@ -286,7 +286,7 @@ input[type="text"] {
                                 <div class="mb-3 col-md-6">
                                     <p class="form-control" readonly>{{data.0.date}}</p>
                                 </div>
-                            </div>-->
+                            </div>
                         </form>
                     </div>
                 </div>
