--- a/capacity_app/templates/capacity_app/project_view_request.html
+++ b/capacity_app/templates/capacity_app/project_view_request.html
@@ -103,6 +103,14 @@ td, th {
 tr:nth-child(even) {
   background-color: #dddddd;
 }
+thead {
+    background-color: #e9ecef;
+    border: 1px solid #ced4da;
+}
+tbody {
+    background-color: #e9ecef;
+    border: 1px solid #ced4da;
+}
 </style>
 <body>
 <!-- ======= Sidebar ======= -->
@@ -305,6 +313,7 @@ tr:nth-child(even) {
                             </div>-->
 
                             <div class="row">
+                                <div class="mb-3 col-lg-12">
                             <label class="form-label">Milestone</label>
                             <table class="table-bordered">
                                 <thead>
@@ -322,6 +331,7 @@ tr:nth-child(even) {
                                 </tr>
                                 </tbody>
                             </table>
+                            </div>
                             </div>
                             <br>
                             <div class="text-center">
