--- a/capacity_app/templates/capacity_app/project_view_request.html
+++ b/capacity_app/templates/capacity_app/project_view_request.html
@@ -310,11 +310,11 @@ tbody {
                                     </div>
                                 </div>-->
                                 <div class="mb-3 col-md-6">
-                                    <label class="form-label">Milestone</label>
+                                    <label class="form-label">Milestones</label>
                                     <table class="table-bordered">
                                         <thead>
                                         <tr>
-                                            <th>Milestone Name</th>
+                                            <th>Milestone</th>
                                             <th>Date</th>
                                         </tr>
                                         </thead>
