--- a/capacity_app/templates/capacity_app/project_view_request.html
+++ b/capacity_app/templates/capacity_app/project_view_request.html
@@ -332,7 +332,8 @@ tbody {
                             <br>
                             {% if data.0.procurement_approval == True and data.0.financial_approval == True%}
                             <div class="text-center">
-                                <button type="button" class="btn btn-primary" title="Edit Request"><a style="text-decoration:none;color:#fff;" href="#"><i class="fas fa-edit"></i>&nbsp;Edit</a></button>
+                                <button type="button" class="btn btn-primary" title="Edit Request">
+                                    <a style="text-decoration:none;color:#fff;" href="#"><i class="fas fa-edit"></i>&nbsp;Edit</a></button>
                             </div>
                             {% endif %}
                         </form>
