--- a/capacity_app/templates/capacity_app/completed_request.html
+++ b/capacity_app/templates/capacity_app/completed_request.html
@@ -137,7 +137,7 @@ td {
                                    data-buttons-class="primary">
                                 <thead>
                                 <tr>
-                                    <th nowrap class="id" data-field="id" data-sortable="true" >ID</th>
+                                    <th nowrap class="request_id" data-field="request_id" data-sortable="true" >ID</th>
                                     <th nowrap class="dc" data-field="dc" data-sortable="true" >DC</th>
                                     <th nowrap class="project_name" data-field="project_name" data-sortable="true" >Project Name</th>
                                     <th nowrap class="user_id" data-field="user_id" data-sortable="true" >User ID</th>
